--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,13 +23,13 @@ jobs:
         shell: bash
 
       - name: Run ESLint
-        run: npm lint
+        run: npm run lint
         shell: bash
 
       - name: Run Prettier
-        run: npm prettier:check
+        run: npm run prettier:check
         shell: bash
 
       - name: Run tests
-        run: npm test
+        run: npm run test
         shell: bash
