--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,7 @@
-name: CI Bookstore
+name: CD Bookstore
 
 on:
-  pull_request:
+  push:
     branches:
       - main
 
@@ -18,3 +18,6 @@ jobs:
 
       - name: Lint, Prettify, and Test
         uses: ./.github/workflows/actions/lint-and-prettify-and-test/action.yml
+
+      - name: Deploy to [undefined]
+        run: echo "Deploying to [undefined]... 🚀"
