--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "start": "npm run build && node dist/server.js",
     "test": "jest",
+    "format:check": "prettier --check .",
     "lint": "eslint .",
     "prettier": "prettier --write .",
     "prettier:check": "yarn prettier -- --check"
@@ -16,8 +17,8 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint__js": "^8.42.3",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
