--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 name: CI Bookstore
 
 on:
-  pull_request:
+  push:
     branches:
       - main
 
@@ -14,13 +14,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install dependencies
-        run: npm install
-        shell: bash
+        uses: .github/workflows/node/action.yml
 
       - name: Run ESLint
         run: npm run lint
