--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,35 +1,56 @@
 name: CI Bookstore
 
 on:
+  workflow_call:
   pull_request:
     branches:
       - main
 
 jobs:
-  build:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Node and Install Dependencies
+        uses: ./.github/workflows/actions/setup
         with:
           node-version: '20'
-
-      - name: Install dependencies
-        run: npm install
-        shell: bash
 
       - name: Run ESLint
         run: npm run lint
         shell: bash
 
+  prettier:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node and Install Dependencies
+        uses: ./.github/workflows/actions/setup
+        with:
+          node-version: '20'
+
       - name: Run Prettier
         run: npm run prettier:check
         shell: bash
 
-      - name: Run tests
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Node and Install Dependencies
+        uses: ./.github/workflows/actions/setup
+        with:
+          node-version: '20'
+
+      - name: Run Tests
         run: npm run test
         shell: bash
