feat: add docker build pipeline with dockerfile

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,3 +54,7 @@ jobs:
       - name: Run Tests
         run: npm run test
         shell: bash
+
+  build-docker-image:
+    needs: test
+    uses: ./.github/workflows/build-docker.yml
